# foxstash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: RESULTS.md
benchmarks/data/: benchmark_results.json
benchmarks/data/sift100k/sift10k/: groundtruth.npy  query.npy
benchmarks/data/sift100k/sift1m/: groundtruth.ivecs  groundtruth.npy
benchmarks/data/sift10k/: groundtruth.npy  query.npy
benchmarks/data/sift1m/: groundtruth.ivecs  groundtruth.npy
benchmarks/python/: download_datasets.py  generate_report.py  quick_bench.py  requirements.txt  run_benchmarks.py
benchmarks/results/: report_sift10k.md  results_sift10k_20260204_163512.json
crates/benches/: Cargo.toml  README.md  STORAGE_BENCHMARKS.md
crates/benches/benches/: comparison.rs  embedding.rs  full.rs  storage.rs
crates/benches/examples/: compare_strategies.rs  parallel_search.rs  quick_comparison.rs
crates/core/: Cargo.toml
crates/core/benches/: quantization.rs  vector_simd.rs
crates/core/src/: lib.rs
crates/core/src/embedding/: cache.rs  mod.rs  onnx.rs
crates/core/src/index/: flat.rs  hnsw.rs  hnsw_pq.rs  hnsw_quantized.rs  mod.rs  streaming.rs
crates/core/src/storage/: compression.rs  file.rs  incremental.rs  mod.rs
crates/core/src/vector/: mod.rs  ops.rs  product_quantize.rs  quantize.rs  simd.rs
crates/native/: BUILD.md  Cargo.toml  build.sh
crates/native/include/: nexus_rag.h
crates/native/src/: lib.rs
crates/python/: Cargo.toml
crates/wasm/: Cargo.toml  PERSISTENCE_IMPLEMENTATION_SUMMARY.md  PERSISTENCE_README.md
crates/wasm/examples/: persistence_example.js
crates/wasm/src/: lib.rs  persistence.rs
demo/: index.html  package.json
docs/: architecture-comparison.md  blog-post.md  hackernews-post.md  reddit-rust-post.md
examples/: README.md  embedding_example.rs
examples/android/: NexusRAG.kt
examples/ios/: NexusRAG.swift
examples/web/: README.md  app.js  benchmark.html  index.html  package.json  styles.css
scripts/: bench.sh
