[workspace]
members = [
    "crates/core",
    "crates/wasm",
    "crates/native",
    "crates/benches",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Narcoleptic Fox <dev@narcolepticfox.com>"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
ndarray = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# ONNX Runtime
ort = "2.0.0-rc.10"
tokenizers = "0.19"

# Caching
lru = "0.12"

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

# Testing
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-wasm]
inherits = "release"
opt-level = "z"     # Optimize for size
lto = true
codegen-units = 1
