[package]
name = "foxstash-python"
version = "0.2.0"
edition = "2021"
description = "Python bindings for Foxstash vector search"
license = "MIT OR Apache-2.0"

[lib]
name = "foxstash"
crate-type = ["cdylib"]

[dependencies]
foxstash-core = { path = "../core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[features]
default = []
