[package]
name = "foxstash-wasm"
version.workspace = true
edition.workspace = true
description = "Foxstash WASM bindings for browser-based vector search"
repository = "https://github.com/Narcoleptic-Fox/foxstash"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
foxstash-core = { path = "../core" }
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Performance",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbTransaction",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbVersionChangeEvent",
    "IdbTransactionMode",
    "IdbCursorWithValue",
    "DomException",
    "DomStringList",
] }
console_error_panic_hook.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
